@@ -1,4 +1,6 @@
 5.0b1 -> 5.0b2:
+    - rpm.org: Make rpmLogRec opaque.
+    - rpm.org: Fix misleading indentation.
     - rpm.org: Add python method for for retrieving (without setting) ts vsflags.
     - jbj: re-enable preferring rpmnss (if WITH_NSS is defined).
     - jbj: fix: --rebuilddb needs an explicit open for Pubkeys lookup.
